<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createPostScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/createPostLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/what_do_you_need"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/description"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe_your_need"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/address"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_guide" />

                    <FrameLayout
                        android:id="@+id/addressInputFrame"
                        android:layout_width="match_parent"
                        android:layout_height="256dp">

                        <fragment
                            android:id="@+id/addressInput"
                            android:name="com.google.android.gms.maps.MapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="FragmentTagUsage" />
                    </FrameLayout>

        <TextView
            android:id="@+id/displayLocation"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_location" />

        <EditText
            android:id="@+id/displayLocationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/your_location_in_short"
            android:importantForAutofill="no" />

        <TextView
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:id="@+id/fullAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_address" />

        <EditText
            android:id="@+id/fullAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/your_detail_address"
            android:importantForAutofill="no" />

        <Switch
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:id="@+id/willingToPayInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/willing_to_pay" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
