<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersDialogTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TableRow
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/radiusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/radius" />

        <EditText
            android:id="@+id/radiusInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/autofill_radius"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/autofill_radius"
            android:inputType="numberDecimal"
            android:text="@string/default_radius"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/radiusUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/unit_kilometre" />
    </TableRow>
</TableLayout>