<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/listHelpConstraintLayout"
    android:background="@color/white"
    tools:context=".ListHelpActivity">

    <TableLayout
        android:id="@+id/postDetailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#E0E0E0"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>
            <TextView android:text="@string/post_title"
                android:padding="8dp" />

            <TextView
                android:id="@+id/titleInput"
                android:layout_weight="1"
                android:padding="8dp" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/post_description"
                android:padding="8dp" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/descriptionInput"
                android:padding="8dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="8dp"
                android:text="@string/full_address" />

            <TextView
                android:id="@+id/fullAddressInput"
                android:layout_weight="1"
                android:padding="8dp" />
        </TableRow>
        <TableRow
            android:visibility="gone">
            <Switch
                android:id="@+id/willingToPayInput"
                android:clickable="false"
                android:text="@string/willing_to_pay"
                android:padding="8dp" />
        </TableRow>
    </TableLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainerHelps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDetailsContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHelps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout><!--
Todo
filter size increase
from checkbox to switch
done
background blue to white
increase padding of cards
name msg location


-->